--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,19 @@ jobs:
         run: cargo test
       - name: Smoke test (SpotBugs jars)
         run: bash scripts/smoke-spotbugs.sh
+      - name: Coverage
+        run: bash scripts/coverage.sh
       - name: Upload artifacts
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: release-artifacts
           path: target/release/
+          if-no-files-found: warn
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: coverage-reports
+          path: target/coverage/**
           if-no-files-found: warn
       - name: Upload smoke test logs
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
