--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,10 @@ zip = "7.1.0"
 jsonschema = "0.17.1"
 futures-util = "0.3"
 opentelemetry = "0.26"
-opentelemetry_sdk = { version = "0.26", features = ["trace"] }
+opentelemetry-otlp = { version = "0.26", features = ["http-proto", "reqwest-client"] }
+opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
+tokio = { version = "1", features = ["full"] }
 rayon = "1"
 
 [dev-dependencies]
