--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,15 @@ jobs:
         run: |
           cargo install cargo-audit --locked
           cargo audit --format sarif > target/audit.sarif
+      - name: Upload SARIF report
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        if: always()
+        with:
+          name: SARIF report
+          path: target/audit.sarif
+          if-no-files-found: warn
       - name: Upload SARIF to GitHub code scanning
         uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: target/audit.sarif
-          if-no-files-found: warn
