--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -85,6 +85,9 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             bin_suffix: ""
+          - os: ubuntu-latest-arm
+            target: aarch64-unknown-linux-gnu
+            bin_suffix: ""
           - os: macos-latest
             target: aarch64-apple-darwin
             bin_suffix: ""
