--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -91,6 +91,9 @@ jobs:
           - os: macos-latest
             target: aarch64-apple-darwin
             bin_suffix: ""
+          - os: macos-15-intel
+            target: x86_64-apple-darwin
+            bin_suffix: ""
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             bin_suffix: ".exe"
