--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -229,7 +229,19 @@ jobs:
           GRADLE_PUBLISH_KEY: ${{ vars.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
         run: |
-          gradle publishPlugins --no-daemon \
+          set -euo pipefail
+          tag_name="${{ needs.release-please.outputs.gradle_plugin_tag_name }}"
+          plugin_version="${tag_name#gradle-plugin-v}"
+          if [[ "${plugin_version}" == "${tag_name}" ]]; then
+            plugin_version="${tag_name#v}"
+          fi
+          if [[ -z "${plugin_version}" || "${plugin_version}" == "${tag_name}" ]]; then
+            echo "Failed to derive plugin version from tag_name=${tag_name}"
+            exit 1
+          fi
+
+          ./gradlew publishPlugins --no-daemon \
+            -PpluginVersion="${plugin_version}" \
             -Pgradle.publish.key="${GRADLE_PUBLISH_KEY}" \
             -Pgradle.publish.secret="${GRADLE_PUBLISH_SECRET}"
         working-directory: gradle-plugin
