docs: add GitHub Actions integration guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,4 +8,5 @@ theme:
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
+  - GitHub Actions: github-actions.md
   - Rules: rules/index.md
