docs: separate Codex usage from GitHub Actions integration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,4 +9,5 @@ nav:
   - Home: index.md
   - Getting Started: getting-started.md
   - GitHub Actions: github-actions.md
+  - Codex: codex.md
   - Rules: rules/index.md
