--- a/.github/workflows/rule-authoring-codex.yml
+++ b/.github/workflows/rule-authoring-codex.yml
@@ -70,6 +70,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          model: gpt-5.3-codex
           safety-strategy: drop-sudo
           prompt-file: target/codex-workflow/prompts/phase1-ideate-plan.md
           output-file: target/codex-workflow/output/phase1-final-message.txt
@@ -207,6 +208,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          model: gpt-5.3-codex
           safety-strategy: drop-sudo
           prompt-file: target/codex-workflow/prompts/phase2-spec.md
           output-file: target/codex-workflow/output/phase2-final-message.txt
@@ -312,6 +314,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          model: gpt-5.3-codex
           safety-strategy: drop-sudo
           prompt-file: target/codex-workflow/prompts/phase3-impl.md
           output-file: target/codex-workflow/output/phase3-final-message.txt
@@ -469,6 +472,7 @@ jobs:
         uses: openai/codex-action@v1
         with:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
+          model: gpt-5.3-codex
           safety-strategy: drop-sudo
           prompt-file: target/codex-workflow/prompts/phase4-verify.md
           output-file: target/codex-workflow/output/phase4-final-message.txt
