--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
     ".": {
       "draft": true,
       "force-tag-creation": true,
+      "exclude-paths": ["gradle-plugin"],
       "release-type": "rust"
     },
     "gradle-plugin": {
